--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -51,6 +51,16 @@ jobs:
       - name: install frontend dependencies
         run: npm install # change this to npm, pnpm or bun depending on which one you use.
 
+      - name: Set environment variables
+        run: |
+          echo VITE_APIKEY=${{ secrets.VITE_APIKEY }} >> $GITHUB_ENV
+          echo VITE_AUTHDOMAIN=${{ secrets.VITE_AUTHDOMAIN }} >> $GITHUB_ENV
+          echo VITE_PROJECTID=${{ secrets.VITE_PROJECTID }} >> $GITHUB_ENV
+          echo VITE_STORAGEBUCKET=${{ secrets.VITE_STORAGEBUCKET }} >> $GITHUB_ENV
+          echo VITE_MESSAGINGSENDERID=${{ secrets.VITE_MESSAGINGSENDERID }} >> $GITHUB_ENV
+          echo VITE_APPID=${{ secrets.VITE_APPID }} >> $GITHUB_ENV
+          echo VITE_MEASUREMENTID=${{ secrets.VITE_MEASUREMENTID }} >> $GITHUB_ENV
+                
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
