--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -51,24 +51,16 @@ jobs:
       - name: install frontend dependencies
         run: npm install # change this to npm, pnpm or bun depending on which one you use.
 
-      - name: Set environment variables
-        env:
-          VITE_APIKEY: ${{ secrets.VITE_APIKEY }}
-          VITE_AUTHDOMAIN: ${{ secrets.VITE_AUTHDOMAIN }}
-          VITE_PROJECTID: ${{ secrets.VITE_PROJECTID }}
-          VITE_STORAGEBUCKET: ${{ secrets.VITE_STORAGEBUCKET }}
-          VITE_MESSAGINGSENDERID: ${{ secrets.VITE_MESSAGINGSENDERID }}
-          VITE_APPID: ${{ secrets.VITE_APPID }}
-          VITE_MEASUREMENTID: ${{ secrets.VITE_MEASUREMENTID }}
+      - name: Create .env file
         run: |
-          echo "VITE_APIKEY=${VITE_APIKEY}" >> $GITHUB_ENV
-          echo "VITE_AUTHDOMAIN=${VITE_AUTHDOMAIN}" >> $GITHUB_ENV
-          echo "VITE_PROJECTID=${VITE_PROJECTID}" >> $GITHUB_ENV
-          echo "VITE_STORAGEBUCKET=${VITE_STORAGEBUCKET}" >> $GITHUB_ENV
-          echo "VITE_MESSAGINGSENDERID=${VITE_MESSAGINGSENDERID}" >> $GITHUB_ENV
-          echo "VITE_APPID=${VITE_APPID}" >> $GITHUB_ENV
-          echo "VITE_MEASUREMENTID=${VITE_MEASUREMENTID}" >> $GITHUB_ENV
-
+          echo "VITE_APIKEY=${{ secrets.VITE_APIKEY }}" >> .env
+          echo "VITE_AUTHDOMAIN=${{ secrets.VITE_AUTHDOMAIN }}" >> .env
+          echo "VITE_PROJECTID=${{ secrets.VITE_PROJECTID }}" >> .env
+          echo "VITE_STORAGEBUCKET=${{ secrets.VITE_STORAGEBUCKET }}" >> .env
+          echo "VITE_MESSAGINGSENDERID=${{ secrets.VITE_MESSAGINGSENDERID }}" >> .env
+          echo "VITE_APPID=${{ secrets.VITE_APPID }}" >> .env
+          echo "VITE_MEASUREMENTID=${{ secrets.VITE_MEASUREMENTID }}" >> .env
+          
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
