--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -69,7 +69,7 @@ jobs:
         with:
           tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: "Admin-panel v__VERSION__"
-          releaseBody: "See the assets to download this version and install."
+          releaseBody: "${{ github.event.head_commit.message }}"
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
